@@ -3,6 +3,7 @@ Revision history for Perl extension Bitcoin::Crypto.
 {{$NEXT}}
 	[Added interface]
 	- Bitcoin::Crypto::Util::merkle_root function
+	- Bitcoin::Crypto::Util::tagged_hash function
 
 3.001 Tue Sep 24, 2024
 	[Changes and fixes]
